<resources>
    <string name="app_name">OrderSYS</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="third_part_login">----------------------- 第三方登陆 ------------------------</string>
    <string name="action_register">注册</string>
    <string name="booking_online">在线预约</string>
    <string name="booking_description">在线预约电网服务，解放你的时间</string>
    <string name="business_check">业务详细查询</string>
    <string name="business_description">提供多种业务的详细信息，需求以及注意事项</string>
    <string name="mine_message">我的预约记录</string>
    <string name="message_description">查看预约信息，实时修改</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <string name="mission_desc">业务详细信息xxxx</string>
    <string name="mission_name">业务A</string>
    <string name="get_time_list_more">查看更多</string>
    <string name="sample_date">XXXX年XX月XX日 X午</string>
    <string name="business_content">业务内容</string>
    <string name="order_time">预约时间9:00</string>
    <string name="final_check_order">确定预约</string>
    <string name="phone_register">手机验证</string>
    <string name="phone">手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="password">密码</string>
    <string name="repeat_pwd">重复输入密码</string>
    <string name="commit">确定</string>
    <string name="register_username">用户名</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="information_username">用户名</string>
    <string name="information_upload">上传头像</string>
    <string name="information_msg">修改个人信息</string>
    <string name="new_phone_number">请输入手机号</string>
    <string name="reset_information">修改个人信息</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_repeat">请再输入一次新密码</string>
    <string name="business_detail">业务信息一览</string>
    <string name="id">ID</string>
    <string name="business_name">业务名称</string>
    <string name="businessdetail_detail">详细信息</string>
    <string name="businessdetail_name">名称</string>
    <string name="mission_history">预约历史</string>
    <string name="mission_history_business_name">业务名称：</string>
    <string name="mission_history_business">YW</string>
    <string name="business_history_mission_time">预约时间：</string>
    <string name="mission_history_mission_time">xDxYxR 9:00</string>
    <string name="mission_history_status">预约状态：</string>
    <string name="mission_history_status_name">已办理</string>
    <string name="single_business_desc">业务内容：</string>
    <string name="singlebusiness_detail">详细业务信息</string>
    <string name="businessdetail_commit">确认</string>
    <string name="missionhistory_office_name">营业厅名称：</string>
    <string name="missionhistory_office_address">营业厅地址：</string>
    <string name="name">国家电网</string>
    <string name="missionhistory_address">xx路</string>
    <string name="book_detail_title">业务类型</string>
    <string name="office_detail_business_message">业务信息</string>
    <string name="activity_office_rule">营业厅规则信息</string>
</resources>
